--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,11 +3,11 @@
 // Variables
 $blue: #313cd1;
 $grey: #b4b0b0;
+$grey-black: #4d4d4d;
 $small: 650px;
 
 body{
-    font-family: 'Rowdies', cursive;
-    width: 100%;
+    font-family: 'Rowdies', cursive;    
 }
 
 html {
@@ -28,6 +28,8 @@ nav{
     display: flex;
     flex-direction: row;
     align-items: center;
+    position:fixed;
+    width:100%;
     justify-content: space-evenly;
     ul{
         display: flex;
@@ -49,3 +51,113 @@ nav{
     }
 }
 
+.bgProgramacion{
+    width:100%;
+    height:100vh;
+    background-image: url("../img/bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+    img{
+        width:250px;
+        height:250px;
+        margin-right: 1%;
+    }
+    .presentacion{
+        color:white;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        display:flex;
+        h1{
+            color: $blue;
+            font-size: 3rem;
+            margin:0;
+        }
+        span{
+            font-size: 1.5rem;
+        }
+    }
+}
+
+#sobreMi{
+    height:100vh;
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:center;
+    gap:10%;
+    .curriculum{
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content:center;
+        width:30%;
+        height:100vh;
+        gap:2%;
+        h2{
+            font-size: 1.5rem;
+        }
+        span{
+            font-size: 1.2rem;
+            color:$grey-black;
+        }
+        a{
+            text-decoration: none;
+            color:$blue;
+            background-color: $blue;
+            padding:3%;
+            display:flex;
+            flex-direction:row;
+            color:white;
+            border-radius:5px;
+            span{
+                color:white;
+            }
+            &:hover{
+                background-color:$grey-black;
+            }
+        }
+    }
+    .skills{
+        width:30%;
+        height:100vh;
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content:center;
+        flex-wrap:wrap;
+
+        h2{
+            text-align: center;
+            width:100%;
+            font-size: 1.5rem;
+        }
+        div{
+            display:flex;
+            flex-direction:row;
+            flex-wrap: wrap;
+            align-items:center;
+            justify-content:center;
+            width:100%;
+            .skill{
+                width:30%;
+                display:flex;
+                flex-direction:column;
+                align-items:center;
+                justify-content:center;
+                img{
+                    width:50px;
+                    height:50px;
+                }
+                span{
+                    font-size:1.1rem;
+                    color:$grey-black;
+                }
+            }
+        }
+    }
+}
