--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,27 @@ html {
   display: none;
 }
 
+@keyframes opacidad {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 nav {
   background-color: black;
   color: white;
@@ -24,6 +45,7 @@ nav {
   position: fixed;
   width: 100%;
   justify-content: space-evenly;
+  animation: opacidad 0.5s;
 }
 
 nav ul {
@@ -49,7 +71,7 @@ nav ul li a:hover {
   width: 100%;
   height: 100vh;
   background-image: url("../img/bg.jpg");
-  background-size: cover;
+  background-size: auto;
   background-attachment: fixed;
   display: flex;
   flex-direction: row;
@@ -61,6 +83,7 @@ nav ul li a:hover {
   width: 250px;
   height: 250px;
   margin-right: 1%;
+  animation: opacidad 0.5s;
 }
 
 .bgProgramacion .presentacion {
@@ -69,6 +92,7 @@ nav ul li a:hover {
   align-items: center;
   justify-content: center;
   display: flex;
+  animation: opacidad 0.5s;
 }
 
 .bgProgramacion .presentacion h1 {
@@ -135,7 +159,6 @@ nav ul li a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
 #sobreMi .skills h2 {
@@ -151,6 +174,7 @@ nav ul li a:hover {
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin-bottom: 1%;
 }
 
 #sobreMi .skills div .skill {
@@ -169,4 +193,21 @@ nav ul li a:hover {
 #sobreMi .skills div .skill span {
   font-size: 1.1rem;
   color: #4d4d4d;
+}
+
+#sobreMi .skills div .barraSkill {
+  width: 100%;
+  background-color: red;
+  border-radius: 10px;
+  display: flex;
+  margin: 0;
+}
+
+#sobreMi .skills div .barraSkill .otraSkill {
+  width: 100%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
