--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ nav {
   width: 100%;
   justify-content: space-evenly;
   animation: opacidad 0.5s;
+  z-index: 2;
 }
 
 nav ul {
@@ -112,6 +113,8 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   gap: 10%;
+  min-height: 600px;
+  margin-top: 5%;
 }
 
 #sobreMi .curriculum {
@@ -195,19 +198,110 @@ nav ul li a:hover {
   color: #4d4d4d;
 }
 
-#sobreMi .skills div .barraSkill {
+#sobreMi .skills div div .barraSkill {
   width: 100%;
-  background-color: red;
   border-radius: 10px;
   display: flex;
-  margin: 0;
+  margin: 2%;
+  justify-content: flex-start;
 }
 
-#sobreMi .skills div .barraSkill .otraSkill {
+#sobreMi .skills div div .barraSkill .otraSkill {
   width: 100%;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  align-items: center;
+}
+
+#proyectos {
+  width: 100%;
+  height: 100vh;
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#proyectos div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#proyectos div h2 {
+  text-align: center;
+}
+
+#proyectos div h3 {
+  text-align: center;
+  color: #4d4d4d;
+}
+
+#proyectos div .proyects {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 70%;
+  flex-wrap: wrap;
+  gap: 2%;
+}
+
+#proyectos div .proyects .proyecto {
+  position: relative;
+  border-radius: 10px;
+  object-fit: cover;
+  overflow: hidden;
+  border-bottom: 2%;
+}
+
+#proyectos div .proyects .proyecto:hover {
+  transform: scale(1.04);
+  transition: all 1s;
+}
+
+#proyectos div .proyects .proyecto:hover .descripcion {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s;
+  border-radius: 10px;
+  transform: translateY(-300px);
+}
+
+#proyectos div .proyects .proyecto picture {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: all 1s;
+  border-radius: 10px;
+  max-height: 190px;
+}
+
+#proyectos div .proyects .proyecto .descripcion {
+  padding: 50px;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 300px;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.5s;
+  border-radius: 10px;
+}
+
+#proyectos div .proyects .proyecto .descripcion a {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#proyectos div .proyects .proyecto .descripcion a:hover {
+  color: #b4b0b0;
 }
