--- a/css/styles.scss
+++ b/css/styles.scss
@@ -53,6 +53,7 @@ nav{
     width:100%;
     justify-content: space-evenly;
     animation: opacidad 0.5s;
+    z-index: 2;
     ul{
         display: flex;
         flex-direction: row;
@@ -69,7 +70,6 @@ nav{
         }
     }
 }
-
 
 .bgProgramacion{
     width:100%;
@@ -112,6 +112,8 @@ nav{
     justify-content:center;
     align-items:center;
     gap:10%;
+    min-height: 600px;
+    margin-top:5%;
     .curriculum{
         display: flex;
         flex-direction: column;
@@ -165,6 +167,7 @@ nav{
             justify-content:center;
             width:100%;
             margin-bottom: 1%;
+            
             .skill{
                 width:30%;
                 display:flex;
@@ -180,21 +183,107 @@ nav{
                     color:$grey-black;
                 }
             }
-            .barraSkill{
-                width:100%;
-                background-color:red;
-                border-radius:10px;
-                display:flex;
-                margin:0;
-                .otraSkill{
+            div{
+                .barraSkill{
                     width:100%;
                     border-radius:10px;
                     display:flex;
-                    flex-direction:column;
-                    justify-content:center;
-                    align-items:center;
+                    margin:2%;
+                    justify-content:flex-start;
+                    
+                    .otraSkill{
+                        width:100%;
+                        border-radius:10px;
+                        display:flex;
+                        flex-direction:column;
+                        margin:0;
+                        align-items:center;
+                    }
                 }
             }
         }
     }
 }
+
+#proyectos{
+    width:100%;
+    height:100vh;
+    max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
+    div{
+        
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        h2{
+            text-align:center;
+        }
+        h3{
+            text-align:center;
+            color:$grey-black;
+        }
+        .proyects{
+            display:flex;
+            flex-direction: row;
+            justify-content:center;
+            align-items:center;
+            width:70%;
+            flex-wrap: wrap;
+            gap:2%;
+                   
+            .proyecto{
+                position:relative;
+                border-radius: 10px;
+                object-fit: cover;
+                overflow: hidden;border-bottom: 2%;   
+                &:hover{
+                    transform: scale(1.04);
+                    transition: all 1s;
+                }
+                &:hover .descripcion{
+                    visibility: visible;
+                    opacity: 1;
+                    transition: all 0.5s;
+                    border-radius: 10px;
+                    transform: translateY(-300px);
+                }
+                picture{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: block;
+                    transition: all 1s;
+                    border-radius: 10px;
+                    max-height: 190px;
+                }
+                .descripcion{
+                    padding: 50px;
+                    position: absolute;
+                    background-color: rgba(0, 0, 0, 0.7);
+                    top: 300px;
+                    height: 100%;
+                    width: 100%;
+                    opacity: 0;
+                    transition: all 0.5s;
+                    border-radius: 10px;
+                    a{
+                        text-decoration: none;
+                        color:white;
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        justify-content: center;
+                        &:hover{
+                            color:$grey;
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+}
+  
