feat: todo responsive menos nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap");
 body {
   font-family: 'Rowdies', cursive;
+  min-width: 450px;
 }
 
 html {
@@ -74,7 +75,7 @@ nav ul li a:hover {
   }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
   nav {
     visibility: hidden;
   }
@@ -148,9 +149,7 @@ nav ul li a:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10%;
-  min-height: 600px;
-  margin-top: 5%;
+  min-height: 850px;
 }
 
 #sobreMi .curriculum {
@@ -164,11 +163,11 @@ nav ul li a:hover {
 }
 
 #sobreMi .curriculum h2 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 #sobreMi .curriculum span {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: #4d4d4d;
 }
 
@@ -251,10 +250,25 @@ nav ul li a:hover {
   align-items: center;
 }
 
+@media screen and (max-width: 750px) {
+  #sobreMi {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #sobreMi .curriculum {
+    width: 80%;
+  }
+  #sobreMi .skills {
+    width: 80%;
+  }
+}
+
 #proyectos {
   width: 100%;
   height: 100vh;
-  max-height: 100vh;
+  min-height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -269,11 +283,15 @@ nav ul li a:hover {
 
 #proyectos div h2 {
   text-align: center;
+  width: 100%;
 }
 
 #proyectos div h3 {
   text-align: center;
   color: #4d4d4d;
+  font-size: 1rem;
+  width: 100%;
+  margin: 0;
 }
 
 #proyectos div .proyects {
@@ -281,7 +299,7 @@ nav ul li a:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 100%;
   flex-wrap: wrap;
   gap: 2%;
 }
@@ -291,12 +309,12 @@ nav ul li a:hover {
   border-radius: 10px;
   object-fit: cover;
   overflow: hidden;
-  border-bottom: 2%;
 }
 
 #proyectos div .proyects .proyecto:hover {
-  transform: scale(1.04);
+  transform: scale(1.03);
   transition: all 1s;
+  z-index: 3;
 }
 
 #proyectos div .proyects .proyecto:hover .descripcion {
