--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,6 +9,7 @@ $medium: 750px;
 
 body{
     font-family: 'Rowdies', cursive;    
+    min-width: 450px;
 }
 
 html {
@@ -55,6 +56,7 @@ nav{
     justify-content: space-evenly;
     animation: opacidad 0.5s;
     z-index: 2;
+    
     ul{
         display: flex;
         flex-direction: row;
@@ -75,7 +77,7 @@ nav{
         
     }
 
-    @media screen and (min-width: $small) {
+    @media screen and (max-width: $small) {
         visibility: hidden;
     }
 }
@@ -134,15 +136,15 @@ nav{
     }
 }
 
+
+
 #sobreMi{
     height:100vh;
     display:flex;
     flex-direction: row;
     justify-content:center;
     align-items:center;
-    gap:10%;
-    min-height: 600px;
-    margin-top:5%;
+    min-height: 850px;
     .curriculum{
         display: flex;
         flex-direction: column;
@@ -152,10 +154,10 @@ nav{
         height:100vh;
         gap:2%;
         h2{
-            font-size: 1.5rem;
+            font-size: 1.3rem;
         }
         span{
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             color:$grey-black;
         }
         a{
@@ -196,7 +198,6 @@ nav{
             justify-content:center;
             width:100%;
             margin-bottom: 1%;
-            
             .skill{
                 width:30%;
                 display:flex;
@@ -232,45 +233,61 @@ nav{
             }
         }
     }
+    @media screen and (max-width: $medium) {
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+        .curriculum{
+            width: 80%;
+        }
+        .skills{
+            width:80%;
+        }        
+    }
 }
 
 #proyectos{
     width:100%;
     height:100vh;
-    max-height: 100vh;
+    min-height: 800px;
     display: flex;
     flex-direction: column;
     align-items:center;
     justify-content:center;
     div{
-        
         display:flex;
         flex-direction:column;
         align-items:center;
         h2{
             text-align:center;
+            width: 100%;
         }
         h3{
             text-align:center;
             color:$grey-black;
+            font-size:1rem;
+            width: 100%;
+            margin:0;
         }
         .proyects{
             display:flex;
             flex-direction: row;
             justify-content:center;
             align-items:center;
-            width:70%;
+            width:100%;
             flex-wrap: wrap;
             gap:2%;
-                   
             .proyecto{
                 position:relative;
                 border-radius: 10px;
                 object-fit: cover;
-                overflow: hidden;border-bottom: 2%;   
+                overflow: hidden;
+                 
                 &:hover{
-                    transform: scale(1.04);
+                    transform: scale(1.03);
                     transition: all 1s;
+                    z-index: 3;
                 }
                 &:hover .descripcion{
                     visibility: visible;
