--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,7 +9,7 @@ $medium: 750px;
 
 body{
     font-family: 'Rowdies', cursive;    
-    min-width: 450px;
+    min-width: 420px;
 }
 
 html {
@@ -45,6 +45,12 @@ html {
     }
 }
 
+section{
+    width: 100%;
+}
+.container{
+    width: 100%;
+}
 nav{
     background-color:black;
     color:white;
@@ -142,7 +148,7 @@ nav{
     height:100vh;
     display:flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content:space-evenly;
     align-items:center;
     min-height: 850px;
     .curriculum{
@@ -239,10 +245,19 @@ nav{
         justify-content:center;
         align-items:center;
         .curriculum{
-            width: 80%;
+            width: 95%;
         }
         .skills{
             width:80%;
+        }        
+    }
+    @media screen and (max-width: $small) {
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+        h2{
+            font-size: 1.2rem;
         }        
     }
 }
@@ -275,7 +290,7 @@ nav{
             flex-direction: row;
             justify-content:center;
             align-items:center;
-            width:100%;
+            width:80%;
             flex-wrap: wrap;
             gap:2%;
             .proyecto{
