--- a/css/styles.scss
+++ b/css/styles.scss
@@ -138,6 +138,7 @@ nav{
             h1{
                 font-size: 2rem;
             }
+
         }
     }
 }
@@ -259,6 +260,11 @@ nav{
         h2{
             font-size: 1.2rem;
         }        
+        .curriculum{
+            span{
+                width:80%;
+            }
+        }
     }
 }
 
@@ -274,6 +280,7 @@ nav{
         display:flex;
         flex-direction:column;
         align-items:center;
+        width:90%;
         h2{
             text-align:center;
             width: 100%;
@@ -290,15 +297,16 @@ nav{
             flex-direction: row;
             justify-content:center;
             align-items:center;
-            width:80%;
+            width:100%;
             flex-wrap: wrap;
             gap:2%;
+            min-width: 420px;
             .proyecto{
                 position:relative;
                 border-radius: 10px;
                 object-fit: cover;
                 overflow: hidden;
-                 
+                min-width: 420px;
                 &:hover{
                     transform: scale(1.03);
                     transition: all 1s;
@@ -318,7 +326,7 @@ nav{
                     display: block;
                     transition: all 1s;
                     border-radius: 10px;
-                    max-height: 190px;
+                    max-height: 290px;
                 }
                 .descripcion{
                     padding: 50px;
