--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,6 @@ nav ul li a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
 }
 
 #proyectos div h2 {
@@ -323,7 +322,6 @@ nav ul li a:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
   flex-wrap: wrap;
   gap: 2%;
   min-width: 420px;
@@ -334,7 +332,6 @@ nav ul li a:hover {
   border-radius: 10px;
   object-fit: cover;
   overflow: hidden;
-  min-width: 420px;
 }
 
 #proyectos div .proyects .proyecto:hover {
@@ -352,13 +349,16 @@ nav ul li a:hover {
 }
 
 #proyectos div .proyects .proyecto picture {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   display: block;
   transition: all 1s;
   border-radius: 10px;
-  max-height: 290px;
+  display: flex;
+  justify-content: center;
+}
+
+#proyectos div .proyects .proyecto picture img {
+  width: 100%;
 }
 
 #proyectos div .proyects .proyecto .descripcion {
