--- a/css/styles.scss
+++ b/css/styles.scss
@@ -280,7 +280,6 @@ nav{
         display:flex;
         flex-direction:column;
         align-items:center;
-        width:90%;
         h2{
             text-align:center;
             width: 100%;
@@ -297,7 +296,6 @@ nav{
             flex-direction: row;
             justify-content:center;
             align-items:center;
-            width:100%;
             flex-wrap: wrap;
             gap:2%;
             min-width: 420px;
@@ -306,7 +304,6 @@ nav{
                 border-radius: 10px;
                 object-fit: cover;
                 overflow: hidden;
-                min-width: 420px;
                 &:hover{
                     transform: scale(1.03);
                     transition: all 1s;
@@ -320,13 +317,15 @@ nav{
                     transform: translateY(-300px);
                 }
                 picture{
-                    width: 100%;
-                    height: 100%;
                     object-fit: cover;
                     display: block;
                     transition: all 1s;
                     border-radius: 10px;
-                    max-height: 290px;
+                    display:flex;
+                    justify-content: center;
+                    img{
+                        width: 100%;
+                    }
                 }
                 .descripcion{
                     padding: 50px;
