--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ nav ul li a:hover {
   .bgProgramacion {
     display: flex;
     flex-direction: column;
+    min-height: 900px;
   }
   .bgProgramacion .presentacion h1 {
     font-size: 2rem;
