--- a/css/styles.scss
+++ b/css/styles.scss
@@ -272,7 +272,7 @@ nav{
 #proyectos{
     width:100%;
     height:100vh;
-    min-height: 800px;
+    min-height: 950px;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -354,5 +354,7 @@ nav{
             
         }
     }
+    @media screen and (max-width: $medium){
+        
+    }
 }
-  
