--- a/css/styles.scss
+++ b/css/styles.scss
@@ -354,7 +354,95 @@ nav{
             
         }
     }
-    @media screen and (max-width: $medium){
+}
+
+#contacto{
+    width:100%;
+    min-height: 600px;
+    display: flex;
+    align-items:center;
+    justify-content:center;
+    div{
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content:center;
+        .contactos{
+            display: flex;
+            flex-direction: row;
+            justify-content:center;
+            align-items:center;
+            a{
+                width:100%;
+                display:flex;
+                flex-wrap: wrap;
+                text-decoration: none;
+                div{
+                    display: flex;
+                    flex-direction: column;
+                    align-items:center;
+                    justify-content:center;
+                    p{
+                        text-align: center;
+                        color:$grey;
+                        &:hover{
+                            color:$blue;
+                        }
+                    }
+                    i{
+                        font-size: 2.5rem;
+                        color:$grey-black;
+                        &:hover{
+                            color:$blue;
+                        }
+                    }
+                    
+                }
+            }
+        }
+    }
+    h2{
+        text-align:center;
+        width: 100%;
         
+    }
+    h3{
+        text-align:center;
+        width: 100%;
+    }
+}
+
+footer{
+    font-family: "Roboto", sans-serif;
+    height:100px;
+    color:$grey-black;
+    display:flex;
+    align-items:center;
+    justify-content:center; 
+    background-color:rgba(128, 104, 104, 0.05);
+    div{
+        width: 100%;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center; 
+        div{
+            p{
+                margin:0;
+            }
+            display:flex;
+            flex-direction:row;
+            a{
+                color:$grey-black;
+                text-decoration: none;
+                &:hover{
+                    color:$blue;
+                }
+            }
+        }
+        p{
+            margin-bottom: 0;
+        }
     }
 }
