--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,9 @@ nav ul li a:hover {
   opacity: 0;
   transition: all 0.5s;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 #proyectos div .proyects .proyecto .descripcion a {
