--- a/css/styles.scss
+++ b/css/styles.scss
@@ -335,6 +335,9 @@ nav{
                     opacity: 0;
                     transition: all 0.5s;
                     border-radius: 10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
                     a{
                         text-decoration: none;
                         color:white;
