feat: nav responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,35 +8,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.active {
-  color: white;
-}
-
-.oculto {
-  display: none;
-}
-
-@keyframes opacidad {
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 0.2;
-  }
-  40% {
-    opacity: 0.4;
-  }
-  60% {
-    opacity: 0.6;
-  }
-  80% {
-    opacity: 0.8;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 section {
   width: 100%;
 }
@@ -49,47 +20,105 @@ section {
   align-items: center;
 }
 
-nav {
+header {
   background-color: black;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  height: 80px;
   position: fixed;
   width: 100%;
-  justify-content: space-evenly;
-  animation: opacidad 0.5s;
-  z-index: 2;
+  z-index: 5;
 }
 
-nav ul {
+header nav {
   display: flex;
-  flex-direction: row;
-  list-style: none;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  height: 80px;
 }
 
-nav ul li {
-  padding: 10px;
-}
-
-nav ul li a {
-  text-decoration: none;
+header nav .nav-toggle {
   color: white;
+  background: none;
+  border: none;
+  font-size: 30px;
+  padding: 0 20px;
+  cursor: pointer;
+  display: none;
 }
 
-nav ul li a:hover {
-  color: #313cd1;
+header nav .logo {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 2%;
 }
 
-@media screen and (max-width: 750px) {
-  nav {
-    visibility: hidden;
+header nav .nav-menu {
+  display: flex;
+  margin-right: 5%;
+  list-style: none;
+  margin: 0px;
+}
+
+header nav .nav-menu .nav-menu-item {
+  font-size: 18px;
+  margin: 0 10px;
+  line-height: 80px;
+  text-transform: uppercase;
+  width: max-content;
+}
+
+header nav .nav-menu .nav-menu-item a {
+  color: white;
+  text-decoration: none;
+}
+
+header nav .nav-menu .nav-menu-item .nav-menu-link {
+  padding: 8px 12px;
+  border-radius: 6px;
+}
+
+header nav .nav-menu .nav-menu-item .nav-menu-link:hover,
+header nav .nav-menu .nav-menu-item .nav-menu-link_active {
+  background-color: #313cd1;
+  transition: 0.5s;
+}
+
+@media (max-width: 750px) {
+  header nav {
+    width: 100%;
+    height: 80px;
   }
-}
-
-@media screen and (max-width: 350px) {
-  nav {
-    visibility: hidden;
+  header nav .nav-toggle {
+    display: block;
+  }
+  header nav .nav-toggle:focus:not(:focus-visible) {
+    outline: none;
+  }
+  header nav .nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    background-color: black;
+    position: fixed;
+    top: 80px;
+    width: 100%;
+    padding: 0;
+    height: calc(100% - 80px);
+    overflow-y: auto;
+    left: 100%;
+    transition: left 0.3s;
+  }
+  header nav .nav-menu-link:hover,
+  header nav .nav-menu-link_active {
+    background: none;
+    color: #313cd1;
+    transition: left 0.3s;
+  }
+  header nav .nav-menu_visible {
+    left: 0;
+    transition: left 0.3s;
   }
 }
 
