--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,35 +17,6 @@ html {
     scroll-behavior: smooth;
 }
 
-.active{
-    color:white;
-}
-
-.oculto{
-    display:none;
-}
-
-@keyframes opacidad{
-    0%{
-        opacity:0;
-    }
-    20%{
-        opacity:0.2;
-    }
-    40%{
-        opacity:0.4;
-    }
-    60%{
-        opacity:0.6;
-    }
-    80%{
-        opacity:0.8;
-    }
-    100%{
-        opacity:1;
-    }
-}
-
 section{
     width: 100%;
 }
@@ -56,42 +27,104 @@ section{
     flex-direction:column;
     align-items:center;
 }
-nav{
-    background-color:black;
-    color:white;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position:fixed;
-    width:100%;
-    justify-content: space-evenly;
-    animation: opacidad 0.5s;
-    z-index: 2;
-    
-    ul{
+
+header {
+    background-color: black;
+    height: 80px;
+    position: fixed;
+    width: 100%;
+    z-index: 5;
+    nav {
         display: flex;
-        flex-direction: row;
-        list-style: none;
-        li{
-            padding: 10px;
-            a{
-                text-decoration: none;
-                color:white;
-                &:hover{
-                    color:$blue;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        height:80px;
+        .nav-toggle {
+            color: white;
+            background: none;
+            border: none;
+            font-size: 30px;
+            padding: 0 20px;
+            cursor: pointer;
+            display: none;
+        }
+        .logo{
+            text-decoration: none;
+            display:flex;
+            align-items:center;
+            justify-content:center; 
+            margin-left: 2%;
+        }
+        .nav-menu {
+            display: flex;
+            margin-right: 5%;
+            list-style: none;
+            margin:0px;
+            .nav-menu-item {
+                font-size: 18px;
+                margin: 0 10px;
+                line-height: 80px;
+                text-transform: uppercase;
+                width: max-content;
+                a{
+                    color: white;
+                    text-decoration: none;
+                }
+                .nav-menu-link {
+                    padding: 8px 12px;
+                    border-radius: 6px;
+                }
+                .nav-menu-link:hover,
+                .nav-menu-link_active {
+                  background-color: $blue;
+                  transition: 0.5s;
                 }
             }
+
         }
     }
-    @media screen and (max-width: $medium) {
-        visibility: hidden;
+    @media (max-width: $medium) {
+        nav{
+            width: 100%;
+            height:80px;
+            .nav-toggle{
+                display: block;
+            }
+            .nav-toggle:focus:not(:focus-visible) {
+                outline: none;
+            }
+            .nav-menu {
+                flex-direction: column;
+                align-items: center;
+                margin: 0;
+                background-color: black;
+                position: fixed;
+                top: 80px;
+                width: 100%;
+                padding:0;
+                height: calc(100% - 80px);
+                overflow-y: auto;
+                left: 100%;
+                transition: left 0.3s;
+            }
+            
+            .nav-menu-link:hover,
+            .nav-menu-link_active {
+              background: none;
+              color: $blue;
+              transition: left 0.3s;
+            }      
+            .nav-menu_visible {
+              left: 0;
+              transition: left 0.3s;
+            }
+        }           
         
     }
-
-    @media screen and (max-width: $small) {
-        visibility: hidden;
-    }
 }
+
+
 
 .bgProgramacion{
     width:100%;
@@ -351,11 +384,6 @@ nav{
                     }
                 }
             }
-        }
-        @media screen and (max-width: $small-medium){
-            .proyecto{
-
-            }    
         }
     }
 }
