--- a/css/styles.scss
+++ b/css/styles.scss
@@ -223,6 +223,7 @@ header {
             flex-direction:row;
             color:white;
             border-radius:5px;
+            margin-top:5%;
             span{
                 color:white;
             }
